--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
 	</distributionManagement>
 	
 	<build>
-		<finalName>wellsfargo-app</finalName>
+		<finalName>maven-web-app</finalName>
 		
 		<plugins>
 			<plugin>
